force-app/main/default/objects/Milestone_Time_Setting__mdt/Milestone_Time_Setting__mdt.object-meta.xml
<CustomObject>
    <description>It will help to set SLA_Text__c value on Case on the basis of  Milestone Name and Severity.</description>
    <label>Milestone Time Setting</label>
    <pluralLabel>Milestone Settings</pluralLabel>
</CustomObject>