force-app/main/default/objects/Milestone_Time_Setting__mdt/fields/Milestone_Name__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Name__c</fullName>
    <label>Milestone Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>