force-app/main/default/objects/Milestone_Time_Setting__mdt/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <description>Milestone time in minutes.</description>
    <label>Time</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>