force-app/main/default/objects/Milestone_Time_Setting__mdt/listViews/All_Columns.listView-meta.xml
<ListView>
    <fullName>All_Columns</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Milestone_Name__c</columns>
    <columns>Severity__c</columns>
    <columns>Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Columns</label>
    <language>en_US</language>
</ListView>